# SecFun

./: .gitignore  CMakeLists.txt  README.md  Я соберу проект под Linux.sh  Я соберу проект под Windows.cmd
SecondFunk/: SecFun_lib.lib  SecondaryFunction.cpp  SecondaryFunction.h
SecondFunk/SecondFunk_lib/: SecondaryFunction.h
SecondFunk_lib/: SecondaryFunction.h
SecondFunk_lib/Win/Release/: SecFun_lib.lib
